--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "parcel": "^2.4.1"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "2.4.1"
+    "@parcel/transformer-sass": "2.4.1",
+    "prettier": "^2.6.2"
   }
 }
